# Pomodouroboros

./: .gitignore  .signing-vars.sh  Ciicon.icns  LICENSE  README.md  checkarch  fixarch  generate_swift_stub.py  icon.icns  mypy.ini  production_code_tool.py  pyproject.toml  releaseme  requirements.in  requirements.txt  runme  setup.cfg  setup.py  testicon.icns  testme  update_stubs
.github/workflows/: test-ui.yml
IBFiles/: GoalListWindow.xib  IntentionEditor.xib  IntentionListWindow.xib  MainMenu.xib  ProgressHUD.xib  StandardMenus.xib  TestWin.xib  prototype_classes.swift  python_classes.swift
IBFiles/IBFiles.xcodeproj/: project.pbxproj
mac/: CiPomodouroboros.py  Pomodouroboros.py  TestPomodouroboros.py
screenshots/: file.text
src/: prototype.py
src/pomodouroboros/: __init__.py  cli.py  hasher.py  mac_gui.py  model2.py  notifs.py  pommodel.py  quickapp.py  storage.py  test_model.py  test_model2.py
src/pomodouroboros/linux/: gtk_progress_bar.py
src/pomodouroboros/macos/: hudmulti.py  intentions_gui.py  mac_dates.py  mac_gui.py  mac_utils.py  model_convert.py  multiple_choice.py  notifs.py  old_mac_gui.py  progress_hud.py  quickapp.py  sessions_gui.py  tab_order.py  text_fields.py
src/pomodouroboros/macos/test/: test_nib_init.py
src/pomodouroboros/model/: __init__.py  boundaries.py  color.py  configuration.py  debugger.py  explanations.py  hud.py  ideal.py  intention.py  intervals.py  nexus.py  observables.py  schema.py  scoring.py  sessions.py  storage.py  util.py
src/pomodouroboros/test/: test_pommodel.py
(+5 files in other folders)
