[metadata]
name = Pomodouroboros
version = 0.4.7
author = Glyph
author_email = glyph@glyph.im
description = An extremely opinionated pomodoro system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glyph/Pomodouroboros
project_urls =
    Bug Tracker = https://github.com/glyph/Pomodouroboros/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pom = pomodouroboros.cli:main

[flake8]
# ObjC method names create too many impossible-to-shorten lines
# W503 seems at odds with black?
ignore = E501,W503
